Edits to gganimate

--- a/final_project_report.html
+++ b/final_project_report.html
@@ -301,6 +301,7 @@ div.tocify {
 </div>
 <div id="additional-analysis" class="section level1">
 <h1>Additional Analysis</h1>
+<p>After</p>
 </div>
 <div id="discussion" class="section level1">
 <h1>Discussion</h1>
