--- a/website/index.html
+++ b/website/index.html
@@ -201,6 +201,12 @@ $(document).ready(function () {
      
   </a>
 </li>
+<li>
+  <a href="mailto:&lt;alc2279@cumc.columbia.edu&gt;">
+    <span class="fa fa-envelope fa-lg"></span>
+     
+  </a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
