--- a/data_processing.html
+++ b/data_processing.html
@@ -190,7 +190,7 @@ $(document).ready(function () {
   <a href="https://aakriti.shinyapps.io/ny_shiny/">NYC Map</a>
 </li>
 <li>
-  <a href="https://jiyueqin.shinyapps.io/framingham/">Framingham Model</a>
+  <a href="https://jiyueqin.shinyapps.io/framingham/">Find Your Risk!</a>
 </li>
 <li>
   <a href="https://github.com/alc2279/p8105_final_project">
