--- a/index.html
+++ b/index.html
@@ -230,10 +230,14 @@ $(document).ready(function () {
 </div>
 
 
-<div id="this-is-our-final-project-website" class="section level3">
-<h3>This is our final project website!</h3>
-<p>This is where we’ll put our screencast + some of our report information</p>
-</div>
+<center>
+<p><img src="pictures/heart1.jpg" width="400px" height="auto"></p>
+</center>
+<p>Heart disease is the leading cause of death for both men and women in the United States and in New York State. More than 800,000 people in the United States die from cardiovascular disease each year—that’s 1 in every 3 deaths, and about 160,000 of them occur in people under age 65. As young residents of New York City, we were collectively interested in investigating prevalence of heart disease and stroke and their risk factors in our city to help us identify targets for cardiovascular prevention policy implementation.</p>
+<h2>
+Dataset
+</h2>
+<p>We utilized the <a href="https://catalog.data.gov/dataset/500-cities-local-data-for-better-health-b32fd">500 Cities: Local Data for Better Health</a> dataset. The 500 Cities project is a collaboration between CDC, the Robert Wood Johnson Foundation, and the CDC Foundation. The purpose of the 500 Cities Project is to provide city- and census tract-level small area estimates for chronic disease risk factors, health outcomes, and clinical preventive service use for the largest 500 cities in the United States. Since we were interested in visualizing these data only for New York city, we filtered the dataset to include data only from New York city.</p>
 
 
 
