--- a/data_processing.html
+++ b/data_processing.html
@@ -193,6 +193,9 @@ $(document).ready(function () {
   <a href="https://jiyueqin.shinyapps.io/framingham/">Find Your Risk!</a>
 </li>
 <li>
+  <a href="final_project_report.html">Project Report</a>
+</li>
+<li>
   <a href="https://heartbeathealth.com/">
     <span class="fa fa-heartbeat fa-lg"></span>
      
