--- a/final_project_report.html
+++ b/final_project_report.html
@@ -446,14 +446,7 @@ div.tocify {
                          &quot;CHOLSCREEN&quot;, &quot;CSMOKING&quot;, &quot;DIABETES&quot;, &quot;HIGHCHOL&quot;, &quot;KIDNEY&quot;, 
                          &quot;LPA&quot;, &quot;MHLTH&quot;, &quot;PHLTH&quot;, &quot;SLEEP&quot;, &quot;CHD&quot;, &quot;STROKE&quot;)) %&gt;%
   droplevels() %&gt;% 
-  select(unique_id, population_count, measure_id, data_value, short_question_text)
-
-##Write csv in R
-write.csv(nyc_cvrisk, file = &quot;data/nyc_cvrisk.csv&quot;, row.names=FALSE)</code></pre>
-</div>
-<div id="reading-in-the-nyc-data-file" class="section level3">
-<h3>Reading in the NYC data file</h3>
-<pre class="r"><code>nyc_cvrisk = read_csv(file = &quot;./data/nyc_cvrisk.csv&quot;)</code></pre>
+  select(unique_id, population_count, measure_id, data_value, short_question_text)</code></pre>
 </div>
 <div id="making-the-animated-scatterplot-for-coronary-artery-disease" class="section level3">
 <h3>Making the animated scatterplot for coronary artery disease</h3>
@@ -508,7 +501,7 @@ p = nyc_cvrisk_joined %&gt;%
   exit_fade()
 
 animate(p, fps = 2, height = 600, width = 1000, renderer = gifski_renderer())</code></pre>
-<p><img src="final_project_report_files/figure-html/unnamed-chunk-6-1.gif" /><!-- --></p>
+<p><img src="final_project_report_files/figure-html/unnamed-chunk-5-1.gif" /><!-- --></p>
 </div>
 <div id="making-the-animated-scatterplot-for-stroke" class="section level3">
 <h3>Making the animated scatterplot for stroke</h3>
@@ -537,7 +530,7 @@ pp = nyc_cvrisk_joined_stroke %&gt;%
   exit_fade()
 
 animate(pp, fps = 2, height = 600, width = 1000, renderer = gifski_renderer())</code></pre>
-<p><img src="final_project_report_files/figure-html/unnamed-chunk-7-1.gif" /><!-- --></p>
+<p><img src="final_project_report_files/figure-html/unnamed-chunk-6-1.gif" /><!-- --></p>
 </div>
 <div id="making-the-correlation-plot-for-coronary-artery-disease" class="section level3">
 <h3>Making the correlation plot for coronary artery disease</h3>
@@ -567,7 +560,7 @@ animate(pp, fps = 2, height = 600, width = 1000, renderer = gifski_renderer())</
   corrplot(method = &quot;square&quot;, addCoef.col = &quot;black&quot;, tl.col=&quot;black&quot;, tl.srt=45, insig = &quot;blank&quot;, 
          # hide correlation coefficient on the principal diagonal
          diag=FALSE, number.cex = .7)</code></pre>
-<p><img src="final_project_report_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
+<p><img src="final_project_report_files/figure-html/unnamed-chunk-8-1.png" width="672" /></p>
 </div>
 <div id="making-the-correlation-plot-for-stroke" class="section level3">
 <h3>Making the correlation plot for stroke</h3>
@@ -592,7 +585,7 @@ animate(pp, fps = 2, height = 600, width = 1000, renderer = gifski_renderer())</
   corrplot(method = &quot;square&quot;, addCoef.col = &quot;black&quot;, tl.col=&quot;black&quot;, tl.srt=45, insig = &quot;blank&quot;, 
          # hide correlation coefficient on the principal diagonal
          diag=FALSE, number.cex = .7)</code></pre>
-<p><img src="final_project_report_files/figure-html/unnamed-chunk-10-1.png" width="672" /></p>
+<p><img src="final_project_report_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
 </div>
 </div>
 <div id="findings" class="section level1">
