--- a/final_project_report.html
+++ b/final_project_report.html
@@ -435,7 +435,7 @@ div.tocify {
 <p>We scraped the data directly from the web as seen in the code below and called it <code>cvrisk</code>.</p>
 <pre class="r"><code>cvrisk = read_csv(&quot;https://data.cdc.gov/api/views/6vp6-wxuq/rows.csv?accessType=DOWNLOAD&quot;) %&gt;% 
     janitor::clean_names() </code></pre>
-<p>We then restricted our database to census tract -level data in New York City and included only the variables that were useful for further data visualization. We called this database <code>nyc_cvrisk</code>. We then exported this to a csv in our repository so that we can read in the limited dataset for future use to improve efficiency.</p>
+<p>We then restricted our database to census tract -level data in New York City and included only the variables that were useful for further data visualization. We called this database <code>nyc_cvrisk</code>.</p>
 <pre class="r"><code>nyc_cvrisk = 
   cvrisk %&gt;% 
   filter(state_desc == &quot;New York&quot;, city_name == &quot;New York&quot;,
@@ -450,7 +450,7 @@ div.tocify {
 </div>
 <div id="making-the-animated-scatterplot-for-coronary-artery-disease" class="section level3">
 <h3>Making the animated scatterplot for coronary artery disease</h3>
-<p>We first created another dataset that can be used for the animated scatterplot such that the outcome measure for coronary artery disease appears as a separate variable in the dataset.</p>
+<p>We first created another dataset that can be used for the animated scatterplot such that the outcome measure for coronary artery disease appears as a separate variable in the dataset. We also repeated the same thing to create another dataset for stroke.</p>
 <pre class="r"><code>nyc_cvrisk_limited = nyc_cvrisk %&gt;% 
   filter(short_question_text %in% c(&quot;Annual Checkup&quot;, &quot;Binge Drinking&quot;, &quot;Cholesterol Screening&quot;, &quot;Chronic Kidney Disease&quot;, &quot;Current Smoking&quot;, &quot;Diabetes&quot;, &quot;Health Insurance&quot;, &quot;High Blood Pressure&quot;, &quot;High Cholesterol&quot;, &quot;Mental Health&quot;, &quot;Obesity&quot;, &quot;Physical Health&quot;, &quot;Physical Inactivity&quot;, &quot;Sleep &lt;7 hours&quot;, &quot;Taking BP Medication&quot;)) %&gt;% 
   droplevels() %&gt;% 
@@ -471,7 +471,7 @@ nyc_cvrisk_joined = left_join(nyc_cvrisk_limited, nyc_cad, by = &quot;unique_id&
 nyc_cvrisk_joined_stroke = left_join(nyc_cvrisk_limited, nyc_stroke, by = &quot;unique_id&quot;)</code></pre>
 <p>We then installed the package required for animation</p>
 <pre class="r"><code>devtools::install_github(&#39;thomasp85/gganimate&#39;)</code></pre>
-<p>We then created an animated scatterplot with Coronary Heart Disease prevalence on the X-axis and different risk factors on the Y-axis</p>
+<p>We then created an animated scatterplot with Coronary Heart Disease prevalence on the X-axis and different risk factors on the Y-axis using the package <code>gganimate</code>.</p>
 <pre class="r"><code>theme_set(theme_bw())  # pre-set the bw theme.
 
 
@@ -540,7 +540,7 @@ animate(pp, fps = 2, height = 600, width = 1000, renderer = gifski_renderer())</
   select(-measure_id)%&gt;%
   spread(key = short_question_text, value = data_value) %&gt;% 
   janitor::clean_names()</code></pre>
-<p>The correlation plot for coronary heart disease and risk factors of interest is as follows:</p>
+<p>We then used the <code>corrplot</code> package to generate the correlation plot for coronary heart disease and risk factors of interest as follows:</p>
 <pre class="r"><code>nyc_cvrisk_wide %&gt;% 
   select(annual_checkup:sleep_7_hours) %&gt;% 
   select(&quot;coronary_heart_disease&quot;, everything())%&gt;%
@@ -642,7 +642,7 @@ animate(pp, fps = 2, height = 600, width = 1000, renderer = gifski_renderer())</
 <h1>Discussion</h1>
 <p>In the process of building this project, we gained several insights about risk factors for heart disease.</p>
 <ul>
-<li><p>In particular, the strength of correlation of lifestyle risk factors with coronary artery disease and stroke indicate the potential for making an impact by targeting these interventions. Interestingly, alcohol intake was negatively correlated with both coronary disease and stroke. This has been observed in several meta-analyses as well. This is however, likely only an association, and not evidence of causation, as discussed in <a href="http://www.onlinejacc.org/content/accj/69/1/25.full.pdf">this article</a>.</p></li>
+<li><p>In particular, the strength of correlation of lifestyle risk factors like physical inactivity and smoking with coronary artery disease and stroke indicate the potential for making an impact by targeting these interventions. Our findings also highlight the need for raising the awareness for modifiable factors like hypertension and diabetes that are also strongly correlated with heart disease. Variable slef-reporting of these conditions across NYC as visualized in our NYC Map app could also likely be due to variation in awareness and underdiagnosis. Interestingly, alcohol intake was negatively correlated with both coronary disease and stroke. This has been observed in several meta-analyses as well. This is however, likely only an association, and not evidence of causation, as discussed in <a href="http://www.onlinejacc.org/content/accj/69/1/25.full.pdf">this article</a>.</p></li>
 <li><p>Visualization of geographic variation of these risk factors in outcomes in New York City provide insights into target neighborhoods for implementation of cardiovascular risk reduction policies.</p></li>
 <li><p>Visualization of individual risk for heart disease using patient-level inputs, and the ability to understand how modification of one input can impact the risk can be very powerful for people working toward decreasing their risk.</p></li>
 </ul>
