--- a/index.html
+++ b/index.html
@@ -237,8 +237,21 @@ $(document).ready(function () {
 <h2>
 Dataset
 </h2>
-<p>We utilized the <a href="https://catalog.data.gov/dataset/500-cities-local-data-for-better-health-b32fd">500 Cities: Local Data for Better Health</a> dataset. The 500 Cities project is a collaboration between CDC, the Robert Wood Johnson Foundation, and the CDC Foundation. The purpose of the 500 Cities Project is to provide city- and census tract-level small area estimates for chronic disease risk factors, health outcomes, and clinical preventive service use for the largest 500 cities in the United States. Since we were interested in visualizing these data only for New York city, we filtered the dataset to include data only from New York city.</p>
+<p>We utilized the <a href="https://catalog.data.gov/dataset/500-cities-local-data-for-better-health-b32fd">500 Cities: Local Data for Better Health</a> dataset. The 500 Cities project is a collaboration between CDC, the Robert Wood Johnson Foundation, and the CDC Foundation. The purpose of the 500 Cities Project is to provide city- and census tract-level small area estimates for chronic disease risk factors, health outcomes, and clinical preventive service use for the largest 500 cities in the United States. Since we were interested in visualizing these data only for New York city, we filtered the dataset to include data only from New York city. The current dataset includes prevalence estimates across 2015 and 2016.</p>
+<h2>
+Findings
+</h2>
+<p>All of the risk factors (with the execption of binge drinking) have a positive association with both coronary heart disease and stroke. The top three risk factors for both outcomes are chronic kidney disease, diabetes and poor physical Health. In addition, many of the risk factors are associated with each other; namely, physical inactivity is heavily correlated with many of the other variables. The risk factors tend to be similarly associated with both coronary heart disease and stroke, with stronger associations with stroke.</p>
+<p>The map of NYC allows you to explore the prevlances of risk factors across the city. We observed that most of the risk factors were observed with higher frequency in the Harlem and Bronx area. Unhealthy behaviors like binge alcohol drinking, however, were more prevalent in downtown Manhattan.</p>
 <p>For a detailed explanation of our findings and conclusions, read our Project Report <a href="final_project_report.html">here</a></p>
+<h2>
+Website Overview
+</h2>
+<ul>
+<li><b>Analysis</b>: Correlation of Risk Factors with Coronary Disease and Stroke at Census-tract level in New York City (2015-2016)</li>
+<li><b>NYC Map</b>: Prevalence of Health Indicators throughout New York City</li>
+<li><b>Find your Risk!</b>: App that allows for input of risk factor variables of an indivdual and predicts the 10-year cardiovascular risk using the Framingham risk score algorithm</li>
+</ul>
 <p>For a brief overview of our website, view our screencast <a href="https://www.youtube.com/watch?v=ogEZEKVYpkQ">here</a></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ogEZEKVYpkQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
