fixed minor typo

--- a/final_project_report.html
+++ b/final_project_report.html
@@ -619,7 +619,7 @@ animate(pp, fps = 2, height = 600, width = 1000)</code></pre>
 <div id="findings" class="section level1">
 <h1>Findings</h1>
 <p>We made several salient observations about correlation of risk factors with <em>Coronary Artery Disease</em> and <em>Stroke</em>.</p>
-<p>All of the risk factors (with the execption of binge drinking and cholesterol screening) have a positive association with both coronary heart disease and stroke. The top three risk factors for both outcomes are chronic kidney disease, diabetes and poor physical Health. In addition, many of the risk factors are associated with each other; namely, physical inactivity is heavily correlated with many of the other variables. The risk factors tend to be similarly associated with both coronary heart disease and stroke, with stronger associations with stroke.</p>
+<p>All of the risk factors (with the exception of binge drinking and cholesterol screening) have a positive association with both coronary heart disease and stroke. The top three risk factors for both outcomes are chronic kidney disease, diabetes and poor physical Health. In addition, many of the risk factors are associated with each other; namely, physical inactivity is heavily correlated with many of the other variables. The risk factors tend to be similarly associated with both coronary heart disease and stroke, with stronger associations with stroke.</p>
 <div id="factors-correlated-with-coronary-artery-disease" class="section level3">
 <h3>Factors correlated with coronary artery disease</h3>
 <p>We observed that the following factors were strongly positively correlated with coronary artery disease:</p>
