--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Findings
 <h2>
 Website Overview
 </h2>
-<p><br> <i><b>Analysis</b></i>: Correlation of Risk Factors with Coronary Disease and Stroke at Census-tract level in New York City (2015-2016)</br> <br> <i><b>NYC Map</b></i>: Prevalence of Health Indicators throughout New York City</br><br> <i><b>Find your Risk!</b></i>: App that allows for input of risk factor variables of an indivdual and predicts the 10-year cardiovascular risk using the Framingham risk score algorithm</br><br></p>
+<p><br> <i><b>Analysis</b></i>: Correlation of Risk Factors with Coronary Disease and Stroke at Census-tract level in New York City (2015-2016)</br> <br> <i><b>NYC Map</b></i>: Prevalence of Health Indicators throughout New York City</br><br> <i><b>Find Your Risk!</b></i>: App that allows for input of risk factor variables of an indivdual and predicts the 10-year cardiovascular risk using the Framingham risk score algorithm</br><br></p>
 <p>For a brief overview of our website, view our screencast <a href="https://www.youtube.com/watch?v=ogEZEKVYpkQ">here</a></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ogEZEKVYpkQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
