--- a/final_project_report.html
+++ b/final_project_report.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Annie, Margaret, Jiyue &amp; Aakriti" />
 
+<meta name="date" content="2018-12-06" />
 
 <title>The Heart Project</title>
 
@@ -403,9 +404,10 @@ div.tocify {
 <div id="data" class="section level1">
 <h1>Data</h1>
 <p>In order to address the first two questions, we utilized the <a href="https://catalog.data.gov/dataset/500-cities-local-data-for-better-health-b32fd">500 Cities: Local Data for Better Health</a> dataset. The 500 Cities project is a collaboration between CDC, the Robert Wood Johnson Foundation, and the CDC Foundation. The purpose of the 500 Cities Project is to provide city- and census tract-level small area estimates for chronic disease risk factors, health outcomes, and clinical preventive service use for the largest 500 cities in the United States. These small area estimates will allow cities and local health departments to better understand the burden and geographic distribution of health-related variables in their jurisdictions, and assist them in planning public health interventions. Since we were interested in visualizing these data only for New York city, we filtered the dataset to include data only from New York city.</p>
+<p>The data can also be downloaded on <a href="https://drive.google.com/drive/folders/1U_8orguSxdIiNpxj_6sx8rav6ubqmmrq">Google Drive</a></p>
 <p>Risk factors that we’re interested in:: (15 total)</p>
 <ul>
-<li>ACCESS2: Current lack of health insurance among adults aged 18&lt;89&gt;<db><d2>64 Years</li>
+<li>ACCESS2: Current lack of health insurance among adults aged 18-64 Years</li>
 <li>BINGE: Binge drinking among adults aged &gt;=18 Year</li>
 <li>BPHIGH: High blood pressure among adults aged &gt;=18 Year</li>
 <li>BPMED: Taking medicine for high blood pressure control among adults aged &gt;=18 Years with high blood pressure</li>
@@ -491,11 +493,8 @@ nyc_stroke = nyc_cvrisk %&gt;%
 
 nyc_cvrisk_joined = left_join(nyc_cvrisk_limited, nyc_cad, by = &quot;unique_id&quot;)
 nyc_cvrisk_joined_stroke = left_join(nyc_cvrisk_limited, nyc_stroke, by = &quot;unique_id&quot;)</code></pre>
-<p>We then installed the package required for animation</p>
-<pre class="r"><code>devtools::install_github(&#39;thomasp85/gganimate&#39;)</code></pre>
-<p>We then created an animated scatterplot with Coronary Heart Disease prevalence on the X-axis and different risk factors on the Y-axis</p>
+<p>We then created an animated scatterplot using <code>gganimate</code> with Coronary Heart Disease prevalence on the X-axis and different risk factors on the Y-axis</p>
 <pre class="r"><code>theme_set(theme_bw())  # pre-set the bw theme.
-
 
 ## using transition_length and state_length
 library(ggplot2)
@@ -523,7 +522,7 @@ p = nyc_cvrisk_joined %&gt;%
   exit_fade()
 
 animate(p, fps = 2, height = 600, width = 1000)</code></pre>
-<p><img src="final_project_report_files/figure-html/unnamed-chunk-6-1.gif" /><!-- --></p>
+<p><img src="final_project_report_files/figure-html/unnamed-chunk-5-1.gif" /><!-- --></p>
 </div>
 <div id="making-the-animated-scatterplot-for-stroke" class="section level3">
 <h3>Making the animated scatterplot for stroke</h3>
@@ -552,7 +551,7 @@ pp = nyc_cvrisk_joined_stroke %&gt;%
   exit_fade()
 
 animate(pp, fps = 2, height = 600, width = 1000)</code></pre>
-<p><img src="final_project_report_files/figure-html/unnamed-chunk-7-1.gif" /><!-- --></p>
+<p><img src="final_project_report_files/figure-html/unnamed-chunk-6-1.gif" /><!-- --></p>
 </div>
 <div id="making-the-correlation-plot-for-coronary-artery-disease" class="section level3">
 <h3>Making the correlation plot for coronary artery disease</h3>
@@ -585,7 +584,7 @@ animate(pp, fps = 2, height = 600, width = 1000)</code></pre>
   corrplot(method = &quot;square&quot;, addCoef.col = &quot;black&quot;, tl.col=&quot;black&quot;, tl.srt=45, insig = &quot;blank&quot;, 
          # hide correlation coefficient on the principal diagonal
          diag=FALSE, number.cex = .7)</code></pre>
-<p><img src="final_project_report_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
+<p><img src="final_project_report_files/figure-html/unnamed-chunk-8-1.png" width="672" /></p>
 </div>
 <div id="making-the-correlation-plot-for-stroke" class="section level3">
 <h3>Making the correlation plot for stroke</h3>
@@ -613,7 +612,7 @@ animate(pp, fps = 2, height = 600, width = 1000)</code></pre>
   corrplot(method = &quot;square&quot;, addCoef.col = &quot;black&quot;, tl.col=&quot;black&quot;, tl.srt=45, insig = &quot;blank&quot;, 
          # hide correlation coefficient on the principal diagonal
          diag=FALSE, number.cex = .7)</code></pre>
-<p><img src="final_project_report_files/figure-html/unnamed-chunk-10-1.png" width="672" /></p>
+<p><img src="final_project_report_files/figure-html/unnamed-chunk-9-1.png" width="672" /></p>
 </div>
 </div>
 <div id="findings" class="section level1">
